fix: light & Dark mode

--- a/style.css
+++ b/style.css
@@ -359,10 +359,8 @@ h3.my-profession {
   flex: 0 0 100%;
   max-width: 100%;
 }
-.about .about-content .buttons {
-  display: flex;
-  gap: 10px;
-  margin-top: 20px;
+.about .about-content .personal-info .buttons {
+  margin-top: 30px;
 }
 .about .about-content .skills-container {
   /* flex: 0 0 40%; */
